[package]
name = "database_exporter"
version = "0.1.0"
authors = ["Amila Welihinda <amilajack@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/amilajack/database_exporter"
documentation = "https://docs.rs/database_exporter"
homepage = "https://github.com/amilajack/database_exporter"
description = """
Export any database to any format
"""
keywords = ["random", "rng"]
categories = ["algorithms"]

[dependencies]
rusqlite = "*"
serde_json = "1.0"
csv = "1.0.0-beta.5"
rayon = "*"
fake = "*"
regex = "*"

[badges]
travis-ci = { repository = "amilajack/database_exporter" }
appveyor = { repository = "amilajack/database_exporter" }
