[package]
name = "database_exporter"
version = "0.1.0"
authors = ["Amila Welihinda <amilajack@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/amilajack/database_exporter"
documentation = "https://docs.rs/database_exporter"
homepage = "https://github.com/amilajack/database_exporter"
description = """
Export any database to any format
"""
keywords = ["database", "export", "json", "csv"]
categories = ["databases"]

[dependencies]
rusqlite = "0.13.0"
serde_json = "1.0"
csv = "1.0.0-beta.5"
fake = "1.2.1"

[badges]
travis-ci = { repository = "amilajack/database_exporter" }
appveyor = { repository = "amilajack/database_exporter" }
