[package]
name = "database_exporter"
version = "0.1.4"
authors = ["Amila Welihinda <amilajack@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/amilajack/database_exporter"
documentation = "https://docs.rs/database_exporter"
homepage = "https://github.com/amilajack/database_exporter"
description = """
Export any database to any format
"""
keywords = ["database", "export", "json", "csv"]
categories = ["databases"]

[lib]
name = "database_exporter"

[dependencies]
rusqlite = "0.14.0"
serde_json = "1.0"
csv = "1.0.0-beta.5"
fake = "2.4.0"

[badges]
travis-ci = { repository = "amilajack/database_exporter" }
appveyor = { repository = "amilajack/database_exporter" }
